--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="es">
 <head>
+   <meta name="google-site-verification" content="-phVyvGluzEtTTUvEoJBAeMFulKfuK0hDoOmtfBgzy4" />
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="ValorAndo: el lugar donde el anime cobra vida a través de análisis, pasión y esencia auténtica." name="description"/>
