--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <html lang="es">
 <head>
    <meta name="google-site-verification" content="-phVyvGluzEtTTUvEoJBAeMFulKfuK0hDoOmtfBgzy4" />
+     <!-- 🔍 SEO esencial -->
+  <meta name="description" content="Explora reseñas poéticas y análisis de anime como Jujutsu Kaisen, Attack on Titan y Cowboy Bebop. Sumérgete en lo más profundo del alma del anime." />
+  <meta name="keywords" content="anime, jujutsu kaisen, attack on titan, reseñas anime, análisis anime, valorando, mejor anime, series, capítulos" />
+  <meta name="author" content="Olikuss" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Cache-control" content="public" />
+
+  <!-- ✅ Título SEO (usa este solo si tu <title> actual no es descriptivo) -->
+  <title>Valorando | Reseñas y análisis poéticos de anime</title>
+
+  <!-- 🔍 Google Search Console (si usas verificación por metaetiqueta) -->
+  <!-- <meta name="google-site-verification" content="TU_CODIGO_AQUI" /> -->
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="ValorAndo: el lugar donde el anime cobra vida a través de análisis, pasión y esencia auténtica." name="description"/>
