--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="es">
 <head>
    <meta name="google-site-verification" content="-phVyvGluzEtTTUvEoJBAeMFulKfuK0hDoOmtfBgzy4" />
+   <meta name="description" content="Valorando es un sitio único con lo mejor del anime. Aquí encontrarás contenido que no existe en ningún otro portal. Si amas el anime, aquí vas a disfrutar de verdad." />
      <!-- 🔍 SEO esencial -->
   <meta name="description" content="Explora reseñas poéticas y análisis de anime como Jujutsu Kaisen, Attack on Titan y Cowboy Bebop. Sumérgete en lo más profundo del alma del anime." />
   <meta name="keywords" content="anime, jujutsu kaisen, attack on titan, reseñas anime, análisis anime, valorando, mejor anime, series, capítulos" />
