--- a/index.html
+++ b/index.html
@@ -10,6 +10,49 @@
   <meta name="author" content="Olikuss" />
   <meta name="robots" content="index, follow" />
   <meta http-equiv="Cache-control" content="public" />
+   <style>
+  /* Corrige imágenes grandes en móviles */
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+
+  /* Hace que el contenedor se adapte */
+  .contenedor, .seccion, .tarjeta {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+  }
+
+  /* Ajustes para navegación por anclas */
+  html {
+    scroll-behavior: smooth;
+  }
+
+  @media (max-width: 768px) {
+    body {
+      font-size: 1rem;
+      padding: 0 10px;
+    }
+
+    nav {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .logo-container {
+      font-size: 1.3rem;
+      text-align: center;
+    }
+
+    .tarjeta {
+      margin-bottom: 20px;
+    }
+  }
+</style>
 
   <!-- ✅ Título SEO (usa este solo si tu <title> actual no es descriptivo) -->
   <title>Valorando | Reseñas y análisis poéticos de anime</title>
